[project]
name = "room-reservation"
version = "0.1.0"
description = "An app for reservating conference rooms"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (==5.1.5)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "uuid (>=1.30,<2.0)",
    "environ (>=1.0,<2.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "django-redis (>=5.4.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
